--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_signin_button: ^1.0.0
   firebase_core: ^0.5.3
   google_sign_in: ^4.5.9
+  flutter_blue: ^0.6.2
 
 dev_dependencies:
   flutter_test:
